--- a/vignettes/packages.bib
+++ b/vignettes/packages.bib
@@ -35,7 +35,7 @@
 
 @Manual{R-foreach,
   title = {foreach: Provides Foreach Looping Construct},
-  author = {{Microsoft} and Steve Weston},
+  author = {{Revolution Analytics} and Steve Weston}},
   year = {2020},
   note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=foreach},
@@ -85,8 +85,8 @@
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2020},
-  note = {R package version 2.3.3},
-  url = {https://github.com/rstudio/rmarkdown},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-rstudioapi,
