--- a/vignettes/aa-introduction.Rmd
+++ b/vignettes/aa-introduction.Rmd
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(
 # list all R packages that are required by LEM model at this point
 knitr::write_bib(c(
   .packages(), "gtools", "openxlsx", "abind", "ggplot2", "reshape2", "gridExtra", "deSolve", "abind", "zoo", "tictoc", "rmarkdown",
-    "stringr", "foreach", "doFuture", "rstudioapi"
+    "stringr", "foreach", "doFuture", "rstudioapi", "shiny"
 ), 'packages.bib')
 ```
 
@@ -37,7 +37,7 @@ In this R package, we provide the code and input data for running our dynamic, c
 
 In each city, the adult population 15–64 is partitioned by sex at birth, HIV risk group [MSM, people who inject drugs (PWID), MSM who inject drugs (MWID) and heterosexuals (HET)], race/ethnicity (black/African American, Hispanic/ Latinx and non-Hispanic white/others) and sexual risk behavior level (high-risk vs. low-risk). Susceptible (HIV-uninfected) individuals could be screened for HIV prior to HIV infections, and high-risk MSM (including MSM-PWID) could access pre-exposure prophylaxis (PrEP). Individuals within each of these 42 groups (\ref{fig:02_model_strata}) progress through several health states outlined in Figure 2 \ref{fig:01_model_diagram.png}. Susceptible individuals start in the health state (denoted by S~x~), and can be infected, at which point they would transition to the “Infected” health state (denoted by I~x~). From here, infected but unaware individuals can be diagnosed and remain in the Diagnosed health state (denoted by D~x~) or initiate ART within 30 days of diagnosis (the “on-ART” health state, denoted by T~2~). There is a chance that individuals do not adhere to treatment and thus progress to an “off-ART" state (denoted by O~x~). Additionally, PLWH can be categorized into acute HIV health states (denoted by I~A~ or D~A~) or by CD4 cell count strata (≥ 500, 200-499, <200 cells/𝜇𝐿) and thus can transition between CD4 cell count categories.Figure \ref{fig:01_model_diagram.png}. Heterosexuals and MSM in the Susceptible state face baseline mortality rates based on race/ethnicity, gender, risk group, and high/low risk among MSM, PWID and MWID as determined by population life tables. PLWH face an increased mortality rate relative to susceptible individuals, derived from [HIVRN]( https://cds.johnshopkins.edu/hivrn/) data for each stratified sub population; this rate also differs based on ART status (off/on) and IDU.
 
-<!-- ![Model strata diagram. \label{fig:model-strata}](../figs/02_model_strata.png) -->
+![Model strata diagram. \label{fig:model-strata}](../figs/02_model_strata.png) 
 
 <!-- ![State-transition diagram of the model.](../figs/01_model_diagram.png) -->
 
