--- a/vignettes/aa-introduction.Rmd
+++ b/vignettes/aa-introduction.Rmd
@@ -39,7 +39,7 @@ In each city, the adult population 15–64 is partitioned by sex at birth, HIV r
 
 ![Model strata diagram. \label{fig:model-strata}](../figs/02_model_strata.png) 
 
-<!-- ![State-transition diagram of the model.](../figs/01_model_diagram.png) -->
+![State-transition diagram of the model.](../figs/01_model_diagram.png) 
 
 Our model required estimates for 1667 total parameters; where data were not available, representative for specific sub populations of interest, up-to-date, and/or exhibiting large variation. We undertook extensive model calibration and validation detailed elsewhere [@calibration]. In brief, we calibrated the model to calibration targets that provided the most concrete indicators of the course of each city’s micro epidemic (ie. total HIV prevalence, new diagnoses, total deaths among PLWH by risk and ethnic group). Internal validation of the model was verified by performing a series of checks - cross checking of each mathematical equation and program coding script, double programming for the Force of Infection (FoI) module, extensive model walk-throughs and extreme value analyses on several scenarios. Lastly, we performed external validation of the calibrated model by comparing city-specific model projections to external estimates of key clinical and epidemiological data not used in the model.
 
