--- a/vignettes/cc-model_functions.Rmd
+++ b/vignettes/cc-model_functions.Rmd
@@ -29,9 +29,9 @@ This section describes the basic functions of the dynamic, compartmental HIV tra
 
 # 2.0 Force of HIV infection {-}
 
-In this component, we estimate the Force of Infection (FoI), which is the rate at which susceptible individuals become infected in the population and is a function of many different parameters. A list of FoI parameters are provided in Table \@ref(tab:FoI).
+In this component, we estimate the Force of Infection (FoI), which is the rate at which susceptible individuals become infected in the population and is a function of many different parameters. A list of FoI parameters are provided in Table 2.1.
 
-Table 2.1: (\tab:parameters) Description of FoI parameters with their `R` names
+Table 2.1: Description of FoI parameters with their `R` names
 
 |**R name**  | **Description**                                                       |
 |:-----------|:---------------------------------------------------------------------:|
@@ -57,19 +57,19 @@ Our model captures HIV transmission between susceptible and infected individuals
 
 # 2.1 Nonlinear Ordinary Differential Equations (ODE functions)
 
-We constructed a system of nonlinear ordinary differential equations (ODEs) to capture movement between 19 base model states for each of the 42 population groups considered in our model (refer to figures in *Introduction* section) . The complete model is thus comprised of 798 equations (42 population groups 19 states). A list of ODE parameters are provided in Table \@ref(tab:ODE).
+We constructed a system of nonlinear ordinary differential equations (ODEs) to capture movement between 19 base model states for each of the 42 population groups considered in our model (refer to figures in *Introduction* section) . The complete model is thus comprised of 798 equations (42 population groups 19 states). A list of ODE parameters are provided in Table 2.2.
 
 Table 2.2: (\tab:ODE) Description of ODE parameters and their `R` names
 
 | **R name**                           | **Description**                                                                              
 |:-------------------------------------|:---------------------------------------------------------------------------------------------:|
 | *ODE parameters for all groups*                                                                                                       
-|-------------------------------------------------------------------------------------------------------------------------------------:|
 | `x`                                  | a vector containing the number of individuals in each HIV state                                
 | `lambda`                             | Sufficient contact rate between individuals                                                    
 | `lambda.p`                           | Sufficient contact rate for individuals on PrEP                                                
 | `rho`                                | Entry rate (assume the same for all groups)                                                    
-| `1/ws`                               | Average duration uninfected individuals in compartment S remain (as identified after screening) | `1/wp`                               | Average duration uninfected individuals in compartment Sp remain on PrEP                        
+| `1/ws`                               | Average duration uninfected individuals in compartment S remain (as identified after screening) | 
+|`1/wp`                                | Average duration uninfected individuals in compartment Sp remain on PrEP                        
 | `mu_mat`                             | Maturation rates (age>65)                                                                       
 | `mo`                                 | Mortality rates for 19 states                                                                   
 | `psi`                                | Screening rates for susceptible or infected                                                     
@@ -77,7 +77,7 @@ Table 2.2: (\tab:ODE) Description of ODE parameters and their `R` names
 | `theta.ai`                           | Transition rate from acute states (Ia) to chronic state (CD4>=500; I1)                          
 | `theta.ad`                           | Transition rate from acute states (Da) to chronic state (CD4>=500; D1)                          
 | `phi`                                | Percent of infected of people receiving ART once diagnosed                                      
-| `v2`,`v3`                              | symptom-based case finding rate for I2 and I3, respectively                                   
+| `v2`,`v3`                            | symptom-based case finding rate for I2 and I3, respectively                                   
 | `alpha`                              | ART initiation rate for D1,D2, and D3                                                           
 | `alpha.re`                           | ART re-initiation rate for o1,O2, and O3                                                        
 | `theta.1`                            | HIV disease progression rate for those not on ART, from I1/D1 to I2/D2                          
@@ -85,9 +85,7 @@ Table 2.2: (\tab:ODE) Description of ODE parameters and their `R` names
 | `theta.t`                            | transition probabilities for those on ART                                                       
 | `theta.o`                            | ART dropout probability from states T1,T2,T3                                                    
 | `eta`                                | PrEP entry rate                                                                                 
-|----------------------------------------------------------------------------------------------------------------------------------------|
 | *Additional ODE parameters for PWID*                                                                                                  
-|:-------------------------------------------------------------------------------------------------------------------------------------:|
 | `x.offoat`                           | a vector containing # of individuals off OAT                                                    
 | `oat.e`                              | OAT entry rate                                                                                  
 | `oat.q`                              | OAT dropout rate                                                                                
