--- a/vignettes/book.bib
+++ b/vignettes/book.bib
@@ -143,7 +143,7 @@
 @techreport{EBIcompendium,
    author = {HIV/AIDS Prevention Research Synthesis Project},
    title = {Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention},
-   journal = {Centers for Disease Control and Prevention}
+   journal = {Centers for Disease Control and Prevention},
    url = {https://www.cdc.gov/hiv/research/interventionresearch/compendium/index.html},
    type = {Report}
 
