--- a/vignettes/bb-model_inputs.Rmd
+++ b/vignettes/bb-model_inputs.Rmd
@@ -27,7 +27,9 @@ knitr::opts_chunk$set(
 
 # 1.0 Data read-in {-}
 
-As described in our evidence synthesis paper, we populated model parameters for each city by synthesizing evidence from 59 peer-reviewed publications and 24 public health and surveillance reports and executed primary analyses using 11 data sets [@evsynth]. Where data were not available, we conducted extensive model validation and calibration to ensure that uncertain model parameters produced results that matched real-world outcomes. We identified parameters that required city-specific data and stratification by gender, risk group and race/ethnicity a priori and sought out databases for primary analysis to augment our evidence synthesis. We also derive information and values for the free parameters; “free parameters” are key uncertain parameters which are not predefined by the model and lead to the most significant uncertainty in target outcomes. The Morris method [@morris1; @morris2; @morris3] was used to select the most influential parameters for calibration, and the Nelder-Mead algorithm [@neldermead1; @neldermead2] was used to iteratively calibrate the model to generate 2,000 best-fitting parameter sets. Through this iterative calibration to specific targets/endpoints in each city - the number of diagnosed PLHIV at each year end (stratified by sex, race/ethnicity and risk group), the annual number of new HIV diagnoses (separately for the overall estimate, African/American (Black) population, and MSM), and the annual number of all-cause mortality deaths among PLHIV (separately for the overall estimate, African/American (Black) population, and MSM) , free parameters and their weights are determined.  Further details are provided in our published paper [@calibration].  All of this information is stored in *Evidence-Inputs-Master.xlsx*, *Evidence-Inputs-Master-Ideal.xlsx* and *cali_par_all.xlsx* found in the *data* directory. To read-in data use the *CascadeCEA-Model-1-Module-Data.input.R* script.  
+As described in our evidence synthesis paper, we populated model parameters for each city by synthesizing evidence from 59 peer-reviewed publications and 24 public health and surveillance reports and executed primary analyses using 11 data sets [@evsynth]. Where data were not available, we conducted extensive model validation and calibration to ensure that uncertain model parameters produced results that matched real-world outcomes. We identified parameters that required city-specific data and stratification by gender, risk group and race/ethnicity a priori and sought out databases for primary analysis to augment our evidence synthesis. We also derive information and values for the free parameters; “free parameters” are key uncertain parameters which are not predefined by the model and lead to the most significant uncertainty in target outcomes. The Morris method [@morris1; @morris2; @morris3] was used to select the most influential parameters for calibration, and the Nelder-Mead algorithm [@neldermead1; @neldermead2] was used to iteratively calibrate the model to generate 2,000 best-fitting parameter sets. 
+
+Through this iterative calibration to specific targets/endpoints in each city - the number of diagnosed PLHIV at each year end (stratified by sex, race/ethnicity and risk group), the annual number of new HIV diagnoses (separately for the overall estimate, African/American (Black) population, and MSM), and the annual number of all-cause mortality deaths among PLHIV (separately for the overall estimate, African/American (Black) population, and MSM) , free parameters and their weights are determined.  Further details are provided in our published paper [@calibration].  All of this information is stored in *Evidence-Inputs-Master.xlsx*, *Evidence-Inputs-Master-Ideal.xlsx* and *cali_par_all.xlsx* found in the *data* directory. To read-in data use the *CascadeCEA-Model-1-Module-Data.input.R* script.  
 
 # 1.1 Create grouping indicators {-}
 
