--- a/vignettes/dd-interventions.Rmd
+++ b/vignettes/dd-interventions.Rmd
@@ -25,7 +25,9 @@ knitr::opts_chunk$set(
 
 In this component, we create all possible combinations of the 16 public health interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention [@EBIcompendium] using the R script *CascadeCEA-Interventions-0-Function-scale.interventions.combination.R*. See Figure 3 below for the list of interventions and their respective categories (*Protect, Diagnose, Treat*). This figure is also saved in the *figs* directory. Upon further assessment, we exclude combinations that would not be practically implemented jointly, termed “mutually exclusive combinations”. For example - two HIV testing interventions delivered in primary care. 
 
-![Evidence based interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention. \label{fig:selected evidence based interventions](../figs/03_evidence_based_int.png)  
+![Evidence based interventions selected from the the CDC’s Compendium of Evidence-Based Interventions and Best Practices for HIV Prevention. \label{fig:selected evidence based interventions}](../figs/03_evidence_based_int.png)  
+
+\vspace{12pt}
 
 Next, we set intervention parameters using the *CascadeCEA-Interventions-0-Function-intervention.model.combination.R* script, and then use the *CascadeCEA-Interventions-0-Function-scale.interventions.combination.R* script to and calculate the scale of delivery inputs at each time step. Both are found in the *R* directory. Recall that scale refers to the proportion of a target population that is provided with an intervention. For HIV prevention programs, scale of delivery was the annual rate of expanded access, or additional scale-up, estimated using the best-available program-specific evidence. In contrast, for HIV testing and care interventions, scale of delivery was defined as the product of setting specific reach and adoption for each intervention *i*, target population *j* and healthcare setting *k*, where reach is defined as the participation rate in a given intervention, conditional on the probability an  individual will access services in setting *k* and the probability the individual will accept the intervention being delivered.
 
@@ -42,32 +44,28 @@ Table 3.0: (\tab:int-strat) Stratification of interventions input data
 | **Stratified by**     | **Interventions**                             
 |:----------------------|:---------------------------------------------:|
 | Race, Sex             | Diagnose             
-
-|                       |   * Opt-out testing in ER                   
-|                       |   * Opt-out testing in primary care           
-|                       |   * Nurse initiated rapid testing             
-|                       |   * Emr testing offer reminder                
+|                       |   * Opt-out testing in ER *               
+|                       |   * Opt-out testing in primary care *          
+|                       |   * Nurse initiated rapid testing*             
+|                       |   * Emr testing offer reminder *               
 | Race, Sex, Risk Group | Protect                          
-
-|                       |   * Syringe Service Program (SSP)             
-|                       |   * Medication for opioid use disorder (MOUD) with buprenorphine        
-|                       |   * Medication for opioid use disorder (MOUD) with methadone           
-|                       |   * Targeted PrEP for high-risk MSM and MWID      
+|                       |   * Syringe Service Program (SSP) *            
+|                       |   * Medication for opioid use disorder (MOUD) with buprenorphine*        
+|                       |   * Medication for opioid use disorder (MOUD) with methadone*           
+|                       |   * Targeted PrEP for high-risk MSM and MWID*   
 |                       |                                             
 |                       | Diagnose                    
-
-|                       |   * MOUD integrated rapid testing             
+|                       |   * MOUD integrated rapid testing *            
 |                       |                                               
 |                       | Treat            
+|                       |   * Individual case management for ART initiation initiation *                               
+|                       |   * Individual care coordination for ART retention *    
+|                       |   * Individual care coordination for ART retention, targeted *                      
+|                       |   * EMR alert for suboptimal ART engagement*   
+|                       |   * Rapid/Same-day ART initiation*             
+|                       |   * ART Re-engagement - Enhanced personal contact*
+|                       |   * ART Re-linkage program *                   
 
-|                       |   * Individual case management for ART initiation      
-|                       |     initiation                                
-|                       |   * Individual care coordination for ART retention     
-|                       |   * Individual care coordination for ART retention, targeted                       
-|                       |   * EMR alert for suboptimal ART engagement   
-|                       |   * Rapid/Same-day ART initiation             
-|                       |   * ART Re-engagement - Enhanced personal contact
-|                       |   * ART Re-linkage program                    
 
 # 3.2 Model outcomes
 
