--- a/vignettes/cc-model_functions.Rmd
+++ b/vignettes/cc-model_functions.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 # paste code snippets
 ```
 
-This section describes the basic functions of the dynamic, compartmental HIV transmission model. For further details, see [@calibration and @interventions].
+This section describes the basic functions of the dynamic, compartmental HIV transmission model. For further details, see [@calibration;@interventions].
 
 # 2.0 Force of HIV infection {-}
 
