--- a/vignettes/dd-interventions.Rmd
+++ b/vignettes/dd-interventions.Rmd
@@ -43,28 +43,28 @@ Table 3.0: (\tab:int-strat) Stratification of interventions input data
 
 | **Stratified by**     | **Interventions**                             
 |:----------------------|:---------------------------------------------:|
-| Race, Sex             | Diagnose             
-|                       |   * Opt-out testing in ER *               
-|                       |   * Opt-out testing in primary care *          
-|                       |   * Nurse initiated rapid testing*             
-|                       |   * Emr testing offer reminder *               
-| Race, Sex, Risk Group | Protect                          
-|                       |   * Syringe Service Program (SSP) *            
-|                       |   * Medication for opioid use disorder (MOUD) with buprenorphine*        
-|                       |   * Medication for opioid use disorder (MOUD) with methadone*           
-|                       |   * Targeted PrEP for high-risk MSM and MWID*   
+| Race, Sex             | ####Diagnose             
+|                       |   * Opt-out testing in ER               
+|                       |   * Opt-out testing in primary care          
+|                       |   * Nurse initiated rapid testing            
+|                       |   * Emr testing offer reminder              
+| Race, Sex, Risk Group | ####Protect                          
+|                       |   * Syringe Service Program (SSP)             
+|                       |   * Medication for opioid use disorder (MOUD) with buprenorphine     
+|                       |   * Medication for opioid use disorder (MOUD) with methadone           
+|                       |   * Targeted PrEP for high-risk MSM and MWID   
 |                       |                                             
-|                       | Diagnose                    
-|                       |   * MOUD integrated rapid testing *            
+|                       | ####Diagnose                    
+|                       |   * MOUD integrated rapid testing            
 |                       |                                               
-|                       | Treat            
-|                       |   * Individual case management for ART initiation initiation *                               
-|                       |   * Individual care coordination for ART retention *    
-|                       |   * Individual care coordination for ART retention, targeted *                      
-|                       |   * EMR alert for suboptimal ART engagement*   
-|                       |   * Rapid/Same-day ART initiation*             
-|                       |   * ART Re-engagement - Enhanced personal contact*
-|                       |   * ART Re-linkage program *                   
+|                       | ####Treat            
+|                       |   * Individual case management for ART initiation initiation                               
+|                       |   * Individual care coordination for ART retention   
+|                       |   * Individual care coordination for ART retention, targeted                       
+|                       |   * EMR alert for suboptimal ART engagement  
+|                       |   * Rapid/Same-day ART initiation             
+|                       |   * ART Re-engagement - Enhanced personal contact
+|                       |   * ART Re-linkage program                    
 
 
 # 3.2 Model outcomes
