--- a/vignettes/book.bib
+++ b/vignettes/book.bib
@@ -149,7 +149,7 @@
 
 }
 
-@article{@CEthreshold,
+@article{CEthreshold,
    author = {Woods, Beth and Revill, Paul and Sculpher, Mark and Claxton, Karl},
    title = {Country-Level Cost-Effectiveness Thresholds: Initial Estimates and the Need for Further Research},
    journal = {Value in Health},
