--- a/vignettes/cc-model_functions.Rmd
+++ b/vignettes/cc-model_functions.Rmd
@@ -55,7 +55,7 @@ Table 2.1: Description of FoI parameters with their `R` names
 
 Our model captures HIV transmission between susceptible and infected individuals via heterosexual contact, homosexual contact and needle-sharing. The effects of sexual mixing patterns (assortative and proportional partnership mixing) and sexual risk behavior (ie. condom use, number of partners) are also accounted for. Consistent with prior studies, we allowed men who have sex with men (MSM) to potentially have heterosexual contact with women. To calculate FoI, we determine a mixing matrix and calculate the mixing probability between subgroups. That is to say, the transmission between susceptible and infected individuals is represented as a matrix which considers the sufficient contact rate between members of susceptible compartments and members of infected compartments.  Groups represent opposite sexes and are defined by race/ethnicity and sexual risk level (high or low). To avoid over-mixing between high- and low-risk populations (which may cause an overestimation of heterosexual transmission), the mixing probability between high-and low-risk individuals is restricted to 1% (proportionately) of partnerships formed. 
 
-# 2.1 Nonlinear Ordinary Differential Equations (ODE functions)
+## 2.1 Nonlinear Ordinary Differential Equations (ODE functions)
 
 We constructed a system of nonlinear ordinary differential equations (ODEs) to capture movement between 19 base model states for each of the 42 population groups considered in our model (refer to figures in *Introduction* section) . The complete model is thus comprised of 798 equations (42 population groups 19 states). A list of ODE parameters are provided in Table 2.2.
 
