--- a/vignettes/dd-interventions.Rmd
+++ b/vignettes/dd-interventions.Rmd
@@ -67,7 +67,7 @@ Table 3.0: Stratification of interventions input data
 |                       |   * ART Re-linkage program                    
 
 
-# 3.2 Model outcomes
+# 3.2 Model outcomes {-}
 
 In this component we run several R scripts that set up the production of model outcomes for output to excel. Model projected outcomes such as incremental and total costs (2018 USD) and QALYs gained are produced for each city, for the combinations of interventions, considering implementation and sustainment periods determined in Section 3.1.
 
