--- a/vignettes/aa-introduction.Rmd
+++ b/vignettes/aa-introduction.Rmd
@@ -35,14 +35,14 @@ knitr::write_bib(c(
 In this R package, we provide the code and input data for running our dynamic, compartmental HIV transmission model that replicates the city-level HIV micro epidemic for six US cities: Atlanta; Baltimore; Los Angeles (LA); Miami (Dade County); New York City (NYC); and Seattle (King County) [@core]. We simulate a population of individuals susceptible to HIV through the course of infection (if ever), diagnosis, treatment with antiretroviral therapy (ART), and ART dropout over a time horizon of 20 years [@interventions; @calibration].
 
 
-In each city, the adult population 15–64 is partitioned by sex at birth, HIV risk group [MSM, people who inject drugs (PWID), MSM who inject drugs (MWID) and heterosexuals (HET)], race/ethnicity (black/African American, Hispanic/ Latinx and non-Hispanic white/others) and sexual risk behavior level (high-risk vs. low-risk). Susceptible (HIV-uninfected) individuals could be screened for HIV prior to HIV infections, and high-risk MSM (including MSM-PWID) could access pre-exposure prophylaxis (PrEP). Individuals within each of these 42 groups (See Figure 1) progress through several health states outlined in Figure 2 \ref{fig:01_model_diagram.png}. 
+In each city, the adult population 15–64 is partitioned by sex at birth, HIV risk group [MSM, people who inject drugs (PWID), MSM who inject drugs (MWID) and heterosexuals (HET)], race/ethnicity (black/African American, Hispanic/ Latinx and non-Hispanic white/others) and sexual risk behavior level (high-risk vs. low-risk). Susceptible (HIV-uninfected) individuals could be screened for HIV prior to HIV infections, and high-risk MSM (including MSM-PWID) could access pre-exposure prophylaxis (PrEP). Individuals within each of these 42 groups (See Figure 1.0) progress through several health states outlined in Figure 1.1 \ref{fig:01_model_diagram.png}. 
 
 \vspace{12pt}
 \vspace{12pt}
 
 Susceptible individuals start in the health state (denoted by S~x~), and can be infected, at which point they would transition to the “Infected” health state (denoted by I~x~). From here, infected but unaware individuals can be diagnosed and remain in the Diagnosed health state (denoted by D~x~) or initiate ART within 30 days of diagnosis (the “on-ART” health state, denoted by T~2~). There is a chance that individuals do not adhere to treatment and thus progress to an “off-ART" state (denoted by O~x~). Additionally, PLWH can be categorized into acute HIV health states (denoted by I~A~ or D~A~) or by CD4 cell count strata (≥ 500, 200-499, <200 cells/𝜇𝐿) and thus can transition between CD4 cell count categories (See Figure 2 below). Heterosexuals and MSM in the Susceptible state face baseline mortality rates based on race/ethnicity, gender, risk group, and high/low risk among MSM, PWID and MWID as determined by population life tables. PLWH face an increased mortality rate relative to susceptible individuals, derived from [HIVRN]( https://cds.johnshopkins.edu/hivrn/) data for each stratified sub population; this rate also differs based on ART status (off/on) and IDU.
 
-![Figure 1. Model strata diagram. \label{fig:model-strata}](../figs/02_model_strata.png)
+![Figure 1.0 Model strata diagram. \label{fig:model-strata}](../figs/02_model_strata.png)
 
 
 
@@ -51,7 +51,7 @@ Susceptible individuals start in the health state (denoted by S~x~), and can be 
 
 
 
-![Figure 2. State-transition diagram of the model.](../figs/01_model_diagram.png) 
+![Figure 1.1 State-transition diagram of the model.](../figs/01_model_diagram.png) 
 
 
 Our model required estimates for 1667 total parameters; where data were not available, representative for specific sub populations of interest, up-to-date, and/or exhibiting large variation. We undertook extensive model calibration and validation detailed elsewhere [@calibration]. In brief, we calibrated the model to calibration targets that provided the most concrete indicators of the course of each city’s micro epidemic (ie. total HIV prevalence, new diagnoses, total deaths among PLWH by risk and ethnic group). Internal validation of the model was verified by performing a series of checks - cross checking of each mathematical equation and program coding script, double programming for the Force of Infection (FoI) module, extensive model walk-throughs and extreme value analyses on several scenarios. Lastly, we performed external validation of the calibrated model by comparing city-specific model projections to external estimates of key clinical and epidemiological data not used in the model.
